--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.261",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gh-pages": "^1.1.0",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -15,6 +16,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "deploy": "gatsby build && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
